--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       async
       src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
     ></script>
-    <script src="./gallery.js" type="module"></script>
+    <script src="./js/gallery.js" type="module"></script>
   </body>
 </html>
